--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"
+            integrity="sha512-zYXldzJsDrNKV+odAwFYiDXV2Cy37cwizT+NkuiPGsa9X1dOz04eHvUWVuxaJ299GvcJT31ug2zO4itXBjFx4w=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <meta charset="UTF-8">
-    <title>ToDoList</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ToDo List</title>
 </head>
 <body>
+<header>
+    <h1>
+        ToDos
+    </h1>
+</header>
+<form>
+    <label>
+        <input type="text" class="todo-input">
+    </label>
+    <button type="submit" class="todo-button">add</button>
+</form>
+<div class="filters">
+    <span class="filter all">All</span>
+    <span class="filter active">Active</span>
+    <span class="filter completed">Completed</span>
+    <span class="filter clear-completed">Clear Completed</span>
+</div>
+<div class="todo-container">
+    <div class="todo-list"></div>
+</div>
 
+<script src="script.js"></script>
 </body>
 </html>
