create todo list (model two)

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <div class="todo-list"></div>
 </div>
 
-<script src="script.js"></script>
+<!--<script src="script.js"></script>-->
+<script src="main.js"></script>
 </body>
 </html>
